// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`asset hub & coretime & collectives > Asset Hub authorizes Coretime upgrade via Collectives > collectives events emitted when sending xcm 1`] = `
[
  {
    "data": {
      "destination": {
        "interior": {
          "X1": [
            {
              "Parachain": 1000,
            },
          ],
        },
        "parents": 1,
      },
      "message": [
        {
          "UnpaidExecution": {
            "checkOrigin": null,
            "weightLimit": "Unlimited",
          },
        },
        {
          "Transact": {
            "call": {
              "encoded": "0x400020883d25f1db1e4a6789b18726a0e94c8a8824c7f329d010633c5d8ad9a1a730",
            },
            "fallbackMaxWeight": {
              "proofSize": 10000,
              "refTime": 500000000,
            },
            "originKind": "Xcm",
          },
        },
      ],
      "messageId": "(redacted)",
      "origin": {
        "interior": {
          "X1": [
            {
              "Plurality": {
                "id": "Technical",
                "part": "Voice",
              },
            },
          ],
        },
        "parents": 0,
      },
    },
    "method": "Sent",
    "section": "polkadotXcm",
  },
]
`;

exports[`asset hub & coretime & collectives > Asset Hub authorizes Coretime upgrade via Collectives > events after notePreimge 1`] = `
[
  {
    "data": {
      "hash_": "(hash)",
    },
    "method": "Noted",
    "section": "preimage",
  },
]
`;

exports[`asset hub & coretime & collectives > Asset Hub authorizes Coretime upgrade via Collectives > events when dispatching non-whitelisted call 1`] = `
[
  {
    "data": {
      "id": null,
      "result": {
        "Err": {
          "Module": {
            "error": "0x03000000",
            "index": 64,
          },
        },
      },
      "task": "(redacted)",
    },
    "method": "Dispatched",
    "section": "scheduler",
  },
]
`;

exports[`asset hub & coretime & collectives > Asset Hub authorizes Coretime upgrade via Collectives > events when dispatching whitelisted call with bad origin 1`] = `
[
  {
    "data": {
      "id": null,
      "result": {
        "Err": "BadOrigin",
      },
      "task": "(redacted)",
    },
    "method": "Dispatched",
    "section": "scheduler",
  },
]
`;

exports[`asset hub & coretime & collectives > Asset Hub authorizes Coretime upgrade via Collectives > governing chain events about dispatching whitelisted call 1`] = `
[
  {
    "data": {
      "callHash": "0x20883d25f1db1e4a6789b18726a0e94c8a8824c7f329d010633c5d8ad9a1a730",
      "result": {
        "Ok": {
          "actualWeight": {
            "proofSize": "(rounded 5000)",
            "refTime": "(rounded 400000000)",
          },
          "paysFee": "Yes",
        },
      },
    },
    "method": "WhitelistedCallDispatched",
    "section": "whitelist",
  },
]
`;

exports[`asset hub & coretime & collectives > Asset Hub authorizes Coretime upgrade via Collectives > governing chain events emitted on receiving xcm from collectives 1`] = `
[
  {
    "data": {
      "callHash": "0x20883d25f1db1e4a6789b18726a0e94c8a8824c7f329d010633c5d8ad9a1a730",
    },
    "method": "CallWhitelisted",
    "section": "whitelist",
  },
  {
    "data": {
      "id": "(redacted)",
      "origin": {
        "Sibling": "(rounded 1000)",
      },
      "success": true,
      "weightUsed": {
        "proofSize": "(rounded 5000)",
        "refTime": "(rounded 300000000)",
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;

exports[`asset hub & coretime & collectives > Asset Hub authorizes Coretime upgrade via Collectives > to-be-upgraded chain events to confirm authorized upgrade 1`] = `
[
  {
    "data": {
      "checkVersion": true,
      "codeHash": "0x0101010101010101010101010101010101010101010101010101010101010101",
    },
    "method": "UpgradeAuthorized",
    "section": "system",
  },
  {
    "data": {
      "id": "(redacted)",
      "origin": {
        "Sibling": 1000,
      },
      "success": true,
      "weightUsed": {
        "proofSize": 0,
        "refTime": "(rounded 100000000)",
      },
    },
    "method": "Processed",
    "section": "messageQueue",
  },
]
`;
